[package]
name = "e-ink-graphics-library"
version = "0.1.0"
edition = "2024"

[dependencies]
ssd1680-rs = { git = "https://github.com/nponsard/ssd1680-rs", rev = "a5489ab8ea203b63ee70e70ff21b82c802df0c37", optional = true }
embedded-hal = "1.0.0"
log = "0.4.26"


[features]
ssd1680 = ["ssd1680-rs"]
